--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,7 @@
-<app-task-item *ngFor="let task of tasks" [task]="task">{{task.text}}</app-task-item>
+<app-add-task (onAddTask)="addTask($event)"></app-add-task>
+<app-task-item 
+    *ngFor="let task of tasks" 
+    [task]="task" 
+    (deleteTask)="deleteThisTask(task)" 
+    (onToggleReminder)="toggleReminder(task)"
+></app-task-item>
